# rfi-serde-byte-repr

./: .travis.yml  Cargo.toml  LICENCE.md  README.md  index.html  search-index.js  settings.html  source-files.js
serde_bytes_repr/: all.html  index.html  sidebar-items.js  struct.ByteFmtDeserializer.html  struct.ByteFmtSerializer.html
src/: deserializer.rs  lib.rs  serializer.rs
src/base64/: chunked_encoder.rs.html  decode.rs.html  display.rs.html  encode.rs.html  lib.rs.html  tables.rs.html
src/hex/: error.rs.html  lib.rs.html
src/proc_macro2/: detection.rs.html  fallback.rs.html  lib.rs.html  parse.rs.html  wrapper.rs.html
src/serde_bytes_repr/: deserializer.rs.html  lib.rs.html  serializer.rs.html
src/syn/: attr.rs.html  await.rs.html  bigint.rs.html  buffer.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  derive.rs.html  discouraged.rs.html  error.rs.html  export.rs.html  expr.rs.html  ext.rs.html  generics.rs.html  lib.rs.html  (+21 more)
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.GenericArgument.html  enum.GenericParam.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.PathArguments.html  enum.ReturnType.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.Visibility.html  enum.WherePredicate.html  index.html  macro.parse_quote.html  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.Attribute.html  struct.BareFnArg.html  struct.Binding.html  struct.BoundLifetimes.html  struct.ConstParam.html  struct.Constraint.html  struct.DataEnum.html  struct.DataStruct.html  struct.DataUnion.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  (+84 more)
tests/: deserialize.rs  serialize.rs
unicode_xid/: all.html  index.html
(+131 files in other folders)
