[package]
name = "serde-byte-repr"
version = "0.1.0"
authors = ["cfsamson <cf@samson.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
base64 = "0.12.2"
hex = "0.4.2"

[dev-dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.55"
