[package]
name = "serde-bytes-repr"
version = "0.1.1"
authors = ["cfsamson <cf@samson.no>"]
description = "Serde adapter for controlling the representation of bytes"
repository = "https://github.com/cfsamson/rfi-serde-byte-repr"
documentation = "https://docs.rs/serde_bytes_repr"
license = "MIT"
readme = "README.md"
categories = ["encoding"]
keywords = ["serde", "adapter", "bytes", "bytearray"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
base64 = "0.12.2"
hex = "0.4.2"

[dev-dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.55"
